checks endpoints
